--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,13 @@
             <artifactId>c3p0</artifactId>
             <version>0.9.1.2</version>
         </dependency>
+
+        <!--数据校验-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.3.6.Final</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>permissionFramework</finalName>
